@@ -75,14 +75,6 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
                 .setValue(WATERLOGGED, false));
     }
 
-    public static final MapCodec<CupboardBlock> CODEC = simpleCodec(CupboardBlock::new);
-
-    @Override
-    protected MapCodec<? extends BaseEntityBlock> codec()
-    {
-        return CODEC;
-    }
-
     @Override
     protected void createBlockStateDefinition(StateDefinition.Builder<Block, BlockState> builder)
     {
@@ -96,13 +88,13 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
     }
 
     @Override
-    protected VoxelShape getCollisionShape(BlockState state, BlockGetter level, BlockPos pos, CollisionContext ctx)
+    public VoxelShape getCollisionShape(BlockState state, BlockGetter level, BlockPos pos, CollisionContext ctx)
     {
         return SHAPE;
     }
 
     @Override
-    protected VoxelShape getVisualShape(BlockState state, BlockGetter level, BlockPos pos, CollisionContext ctx)
+    public VoxelShape getVisualShape(BlockState state, BlockGetter level, BlockPos pos, CollisionContext ctx)
     {
         return SHAPE;
     }
@@ -188,7 +180,7 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
     }
 
     @Override
-    public InteractionResult useWithoutItem(BlockState state, Level level, BlockPos pos, Player player, BlockHitResult hit)
+    public InteractionResult use(BlockState state, Level level, BlockPos pos, Player player, InteractionHand hand, BlockHitResult hit)
     {
         ItemStack held = player.getItemInHand(InteractionHand.MAIN_HAND);
 
@@ -206,7 +198,7 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
 
                 while (!stack.isEmpty())
                 {
-                    BlockPos current = stack.removeLast();
+                    BlockPos current = stack.remove(stack.size()-1);
                     if (!visited.add(current)) continue;
 
                     BlockState currentState = level.getBlockState(current);
@@ -240,8 +232,7 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
                 BlockPos poss = blockEntity.getBlockPos();
                 serverPlayer.openMenu(new SimpleMenuProvider(
                         (containerId, inventory, pl) -> new CupboardMenu(containerId, inventory, (CupboardBlockEntity) blockEntity),
-                        state.getBlock().getName()
-                ), poss);
+                        state.getBlock().getName()));
             }
         }
 
@@ -254,7 +245,7 @@ public class CupboardBlock extends BaseEntityBlock implements SimpleWaterloggedB
 
         while (!stack.isEmpty())
         {
-            BlockPos current = stack.removeLast();
+            BlockPos current = stack.remove(stack.size()-1);
             if (!visited.add(current)) continue;
 
             BlockState currentState = level.getBlockState(current);
